syntax = "proto3";

package auth.v1;

option go_package= "github.com/nithitvip/demo-grpc-gateway/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


message SignInRequest{
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

message SignupRequest {
  string username = 1;
  string password = 2;

}

message SignupResponse {
  string account_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

service AuthService {
  rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/api/v1/signin"
      body: "*"
    };
  };
  rpc Signup(SignupRequest) returns (SignupResponse) {
    option (google.api.http) = {
      post: "/api/v1/signup"
      body: "*"
    };
  }
}