syntax = "proto3";

package blog.v1;

option go_package= "bitbucket.com/mightnvi/grpc-blog/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";

message CreateBlogRequest {
  string title = 1;
  string content = 3;
}

message CreateBlogResponse {
  string id = 1;
}

message ReadBlogRequest {
  string id = 1;
}

message ReadBlogResponse {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message UpdateBlogRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message PartialUpdateBlogRequest {
  string id = 1;
  google.protobuf.FieldMask field_mask = 2;
  string title = 3;
  string content = 4;
}

message DeleteBlogRequest {
  string id = 1;
}

message ListBlogResponse {
  repeated Blog blogs = 1;
}

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

service BlogService {
  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {
    option (google.api.http) = {
      post: "/api/v1/blog"
      body: "*"
    };
  };
  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {
    option (google.api.http) = {
      get: "/api/v1/blog/{id}"
    };
  };
  rpc UpdateBlog (UpdateBlogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/blog/{id}"
      body: "*"
    };
  };
  rpc PartialUpdateBlog (UpdateBlogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/api/v1/blog/{id}"
      body: "*"
    };
  };
  rpc DeleteBlog (DeleteBlogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/blog/{id}"
    };
  };
  rpc ListBlog (google.protobuf.Empty) returns (ListBlogResponse) {
    option (google.api.http) = {
      get: "/api/v1/blog"
    };
  };

}